--- a/ProyectoCapstone.ipynb
+++ b/ProyectoCapstone.ipynb
@@ -66,7 +66,7 @@
         "# Cargar archivo (ajusta el nombre si trabajas localmente)\n",
         "from google.colab import drive, files\n",
         "drive.mount('/content/drive')\n",
-        "df = pd.read_csv('/content/drive/My Drive/Colab Notebooks/registro-administrativo-historico_2009-2024-inicio.csv', sep=';', thousands='.', low_memory=False)"
+        "df = pd.read_csv('Ruta del archivo', sep=';', thousands='.', low_memory=False)"
       ],
       "metadata": {
         "colab": {
